<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    header  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mac"
            android:text="@string/hello"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/mac"
            android:text="@string/vishal_singh"
            android:textColor="@color/secondary"
            android:textSize="30sp" />

    </LinearLayout>

    <!--  mnc  body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/box_bg"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/mac"
            android:gravity="center"
            android:text="MnC"
            android:textColor="@color/text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtTotalStudent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/total_students_50"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btnMnCInfo"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:background="@drawable/card_bg_white"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/info"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMnCResult"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/card_bg"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/text"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

    <!--  cse  body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box_bg"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/mac"
            android:gravity="center"
            android:text="CSE"
            android:textColor="@color/text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtTotalStudentCse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="Total students : 125"
            android:textColor="@color/text"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/btnCSEInfo"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:background="@drawable/card_bg_white"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/info"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCSEResult"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/card_bg"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/result"
                android:textColor="@color/text"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

    <!--  mess body -->
    <Button
        android:id="@+id/btnMess"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/card_bg"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="Mess Schedule"
        android:textColor="@color/text"
        android:textSize="17sp" />

    <!--        footer  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@color/grey"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/footer"
            android:textColor="@color/text"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
