<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/box_bg"
    android:orientation="vertical"
    android:id="@+id/messContainer"
    android:padding="15dp">
    <!--header-->
    <TextView
        android:id="@+id/mDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/mac"
        android:gravity="center"
        android:text="Monday"
        android:textColor="@color/text"
        android:textSize="30sp" />

    <!--    body-->

    <!--    breakfast-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/breakfast"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mBreakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/breakfast"
            android:textColor="@color/text"
            android:textSize="20sp" />


    </LinearLayout>

    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp" />

    <!--    lunch-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/lunch"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/lunch"
            android:textColor="@color/text"
            android:textSize="20sp" />

    </LinearLayout>


    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>

    <!--    snacks-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="22dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/snacks"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mSnacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/snacks"
            android:textColor="@color/text"
            android:textSize="20sp" />

    </LinearLayout>


    <View
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp" />

    <!--    dinner-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/dinner"
            android:textColor="@color/secondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mDinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:text="@string/dinner"
            android:textColor="@color/text"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>
